# FeederNet

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  client.Dockerfile  docker-compose.yml  init.sql  server.Dockerfile
feedhandler/: ITCHTradeReceiver.cpp
include/: AggTradeMQSender.hpp  DBManager.hpp  MemoryPool.hpp  Messages.hpp  Queue.hpp  Socket.hpp  TradeReceiver.hpp  TradeServer.hpp  Utils.hpp
logs/: log_TradeReceiver.txt
pythonOptionPricer/: OptionPricer.py  PricingCalculations.py  README.md
pythonOptionPricer/static/: style.css
pythonZeroMQReceiver/: vwapReceiver.py
test/: CMakeLists.txt  RunTradeReceiver.cpp  RunTradeServer.cpp  TestAggTradeMQSender.cpp  TestDBManager.cpp  TestHashMap.cpp  TestMemoryPool.cpp  TestOrderBook.cpp  TestQueue.cpp
tradefiles/: run.sh
zero-mq/: sub.py
